Update 'backend-tests-go-hsfpzfvc' component image to: quay.io/rhtap_qe/backend-tests-go-hsfpzfvc:76cc64f2b677dbb65a229a2c061ec64b749ea074@sha256:605a7ad1a2499602ccc8d8af67f013bd8a041b411e16dfdc0e5257e00973a691

--- a/components/backend-tests-go-hsfpzfvc/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-hsfpzfvc/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-hsfpzfvc
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-hsfpzfvc:76cc64f2b677dbb65a229a2c061ec64b749ea074@sha256:605a7ad1a2499602ccc8d8af67f013bd8a041b411e16dfdc0e5257e00973a691
+          name: container-image
